upload cat for test added

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Главная страница</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-$END$
+
+<main>
+
+    <h1>Поиск постов</h1>
+
+    <form action="post_by_tag.html">
+        <p>По тегу</p>
+        <select name="tag" id="">
+            <option value="еда">Еда</option>
+            <option value="природа">Природа</option>
+            <option value="путешествия">Путешествия</option>
+        </select>
+        <input type="submit" value="Найти" class="button">
+    </form>
+
+    <hr>
+
+    <a href="post_form.html" class="button">Добавить пост</a>
+
+</main>
 </body>
 </html>
