--- a/templates/post_by_tag.html
+++ b/templates/post_by_tag.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Все посты по тегу</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-$END$
+<main>
+
+    <a href="index.html" class="link">Назад</a>
+
+    <h1>Посты по тегу “Еда”</h1>
+
+    <div class="post">
+        <img src="https://place-hold.it/640" width="100%" alt="">
+        <p>Это подпись к посту, которая может содержать <a href="хештеги">#хештеги</a></p>
+    </div>
+
+    <hr>
+
+    <a href="post_form.html" class="button">Добавить пост</a>
+
+</main>
 </body>
 </html>
