--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Добавить пост</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-$END$
+<main>
+
+    <a href="index.html" class="link">Назад</a>
+
+    <h1>Добавить пост</h1>
+
+    <form action="post_uploaded.html">
+        <p>По тегу</p>
+        <div><textarea name="" rows="5" width="100%"></textarea></div>
+        <div><input type="file"></div>
+        <div><input type="submit" value="Добавить" class="button"></div>
+    </form>
+
+    <hr>
+
+
+
+</main>
 </body>
 </html>
