--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,19 @@
 
     <h1>Поиск постов</h1>
 
-    <form action="post_by_tag.html">
+    <form action="/tag">
         <p>По тегу</p>
-        <select name="tag" id="">
-            <option value="еда">Еда</option>
-            <option value="природа">Природа</option>
-            <option value="путешествия">Путешествия</option>
+        <select name="tag" >
+            {% for tag in tags %}
+                <option value="{{ tag }}">{{ tag }}</option>
+            {% endfor %}
         </select>
         <input type="submit" value="Найти" class="button">
     </form>
 
     <hr>
 
-    <a href="post_form.html" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
