--- a/templates/post_by_tag.html
+++ b/templates/post_by_tag.html
@@ -8,18 +8,19 @@
 <body>
 <main>
 
-    <a href="index.html" class="link">Назад</a>
+    <a href="/" class="link">Назад</a>
 
-    <h1>Посты по тегу “Еда”</h1>
-
+    <h1>Посты по тегу “{{ tag }}”</h1>
+    {% for post in posts %}
     <div class="post">
-        <img src="https://place-hold.it/640" width="100%" alt="">
-        <p>Это подпись к посту, которая может содержать <a href="хештеги">#хештеги</a></p>
+        <img src="{{ post.pic }}" width="100%" alt="">
+        <p>{{ post.content }}</p>
     </div>
+    {% endfor %}
 
     <hr>
 
-    <a href="post_form.html" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
