--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,19 @@
 
     <h1>Поиск постов</h1>
 
-    <form action="/tag">
+    <form action="post_by_tag.html">
         <p>По тегу</p>
         <select name="tag" >
-            {% for tag in tags %}
-                <option value="{{ tag }}">{{ tag }}</option>
-            {% endfor %}
+                <option value="еда">еда</option>
+                <option value="природа">природа</option>
+                <option value="вечеринка">вечеринка</option>
         </select>
         <input type="submit" value="Найти" class="button">
     </form>
 
     <hr>
 
-    <a href="/post" class="button">Добавить пост</a>
+    <a href="post_form.html" class="button">Добавить пост</a>
 
 </main>
 </body>
