--- a/templates/post_by_tag.html
+++ b/templates/post_by_tag.html
@@ -8,19 +8,18 @@
 <body>
 <main>
 
-    <a href="/" class="link">Назад</a>
+    <a href="index.html" class="link">Назад</a>
 
-    <h1>Посты по тегу “{{ tag }}”</h1>
-    {% for post in posts %}
+    <h1>Посты по тегу “Еда”</h1>
+
     <div class="post">
-        <img src="{{ post.pic }}" width="100%" alt="">
-        <p>{{ post.content }}</p>
+        <img src="https://images.unsplash.com/photo-1637141479049-42656cb6b741?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1180&q=80" width="100%" alt="">
+        <p>Описание поста тут </p>
     </div>
-    {% endfor %}
 
     <hr>
 
-    <a href="/post" class="button">Добавить пост</a>
+    <a href="post_form.html" class="button">Добавить пост</a>
 
 </main>
 </body>
