--- a/templates/post_uploaded.html
+++ b/templates/post_uploaded.html
@@ -8,13 +8,13 @@
 <body>
 <main>
 
-    <a href="/" class="link">Назад</a>
+    <a href="index.html" class="link">Назад</a>
 
     <h1>Пост добавлен! </h1>
 
     <div class="post">
-        <img src="{{ post_data.pic }}" width="100%" alt="">
-        <p>{{ post_data.content }}</p>
+        <img src="https://images.unsplash.com/photo-1637141479049-42656cb6b741?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1180&q=80" width="100%" alt="">
+        <p>Текст добавленного поста тут</p>
     </div>
 
     <hr>
