--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -13,12 +13,15 @@
     <h1>Добавить пост</h1>
 
     <form action="post_uploaded.html" method="POST" enctype="multipart/form-data">
-        <div>
-            <textarea name="content" rows="5" ></textarea>
-        </div>
+        <p>Картинка к посту</p>
         <div>
             <input type="file" name="picture">
         </div>
+        <p>Текст к посту</p>
+        <div>
+            <textarea name="content" rows="5" ></textarea>
+        </div>
+
         <div>
             <input type="submit" value="Добавить" class="button">
         </div>
