--- a/loader/templates/post_form.html
+++ b/loader/templates/post_form.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить пост</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../../static/style.css">
 </head>
 <body>
 <main>
 
-    <a href="index.html" class="link">Назад</a>
+    <a href="/" class="link">Назад</a>
 
     <h1>Добавить пост</h1>
 
-    <form action="post_uploaded.html" method="POST" enctype="multipart/form-data">
+    <form action="/post" method="POST" enctype="multipart/form-data">
         <p>Картинка к посту</p>
         <div>
             <input type="file" name="picture">
         </div>
         <p>Текст к посту</p>
         <div>
-            <textarea name="content" rows="5" ></textarea>
+            <textarea name="content" rows="5"></textarea>
         </div>
 
         <div>
